# ChangeLog for dev-perl/SQL-Translator
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.8 2009/10/12 11:35:06 tove Exp $

  12 Oct 2009; Torsten Veller <tove@gentoo.org>
  -SQL-Translator-0.11002.ebuild:
  Cleanup

*SQL-Translator-0.11003 (29 Sep 2009)

  29 Sep 2009; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.11003.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org>
  -SQL-Translator-0.09006.ebuild, -SQL-Translator-0.09007.ebuild,
  -SQL-Translator-0.11001.ebuild:
  Cleanup

*SQL-Translator-0.11002 (31 Aug 2009)

  31 Aug 2009; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.11002.ebuild:
  Version bump

*SQL-Translator-0.11001 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
  +SQL-Translator-0.11001.ebuild:
  Version bump via perl-bump experimental tool.

  27 Jun 2009; Torsten Veller <tove@gentoo.org>
  SQL-Translator-0.09007.ebuild:
  YAML is needed at runtime and Test-Differences only for testing

*SQL-Translator-0.09007 (27 Jun 2009)

  27 Jun 2009; Torsten Veller <tove@gentoo.org>
  +SQL-Translator-0.09007.ebuild:
  Version bump

*SQL-Translator-0.09006 (23 Jun 2009)

  23 Jun 2009; Robin H. Johnson <robbat2@gentoo.org>
  +SQL-Translator-0.09006.ebuild, +metadata.xml:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
