@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST SQL-Translator-0.11003.tar.gz 402788 RMD160 6d509fd0bdf37ec61ff89b8234b69794b19e0b4f SHA1 4b3e96af57ba80ad3fe72e6277158329f6d68ac6 SHA256 069540b04d85d73bf28dd176da97a47affc22da3d04553aef830c284ef28c735
+DIST SQL-Translator-0.11004.tar.gz 403878 RMD160 2810481115bc5ac01ea74b1fea2abe9a611c003b SHA1 ddff4e79c8b56d0668188f46be1b4bba7924111e SHA256 9ba1ef5a43be79c0f60b679ba10ff7613a0adf4d4f684cf4e5827a9a343e90c9
 EBUILD SQL-Translator-0.11003.ebuild 963 RMD160 daf2fc3a352d916baabfe5dece77c0ecfc9e9b4e SHA1 ce572818b4efbc7c0dd6d45030f4cdf7a6dd0ca4 SHA256 2ccf4f6c119ed27d24b7beb4f29594f3d985169069873d83e3c5ba281db72daf
-MISC ChangeLog 1412 RMD160 ad428158acecddc8a4c7af82fa27a2e8ae445f39 SHA1 8bae05fd6abd0d9a69a054c7d02fefcc6d92c1cb SHA256 8855535fa65a728b955a47bc54333e1c77c483b8e66a7130ee8eddc7b534689b
+EBUILD SQL-Translator-0.11004.ebuild 963 RMD160 75f6b722f399aed1173d89eba0f7529a640b915d SHA1 1a3a14d4c08a909c1881d8282a3e00200cb4b936 SHA256 afe3facc1175773e12fef4be0d7f082f6afd432ab2cbe2237c138e8091077778
+MISC ChangeLog 1549 RMD160 6c5668eeb4d16862b0918faec70b626be39f892c SHA1 ad1b9ef0df63b0a347d46133e098ffd9c7c4cc02 SHA256 7a088624315a6693fe4ee9999eb4ff6b48b073dbb7f321ade4d750a4772c0d5b
 MISC metadata.xml 223 RMD160 a24ecf7db26ab80498e831741aaed5a4ba08c83e SHA1 5b9c6bcc6e8fad7a2e0bca77e4146655b128cf1c SHA256 6569b7c972f82bd22c5cdfdae400e50ff816d768139be8fb01434132e52f6749
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkrTFF0ACgkQV3J2n04Eauz8xgCdEwdIJeQkDtB55Nj8QxrNch37
-QksAmwTBQkAt5QrO5paxyOVqTpIdGpQ/
-=cyIc
+iEYEARECAAYFAkt5C5MACgkQV3J2n04Eauz7FgCcDg+F1pXueFf3p2Hv0jWISSGm
+Nd0AniT0k8A1y39NtHAYqq0Zj+db+duf
+=De94
 -----END PGP SIGNATURE-----
