@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/SQL-Translator
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.8 2009/10/12 11:35:06 tove Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.9 2010/02/15 08:53:33 tove Exp $
+
+*SQL-Translator-0.11004 (15 Feb 2010)
+
+  15 Feb 2010; Torsten Veller <tove@gentoo.org>
+  +SQL-Translator-0.11004.ebuild:
+  Version bump
 
   12 Oct 2009; Torsten Veller <tove@gentoo.org>
   -SQL-Translator-0.11002.ebuild:
